# ipc

./: .gitignore  .travis.yml  Makefile.am  autogen.sh  configure.ac  test-ipcd
debian/: .gitignore  README.Debian  README.source  changelog  control  copyright  ipcd.install  rules
src/ipc/: ipcd-conf.c  ipcd-listen.c  ipcd.c  ipcd.conf  ipcd.h
src/libipc/: libipc.c  libipc.h
src/shared/: conf-parser.c  conf-parser.h  conf.c  conf.h  log.h  signal.c  signal.h  string-util.c  string-util.h  test-shared.c  thread.c  thread.h
src/test/: test-suite.c  test-suite.h  unit-test.c  unit-test.h
test/: test-shared-conf-parser.c
test/shared/: conf-parser-test.c  string-util-test.c
units/: .gitignore  ipcd.service.in  ipcd.socket
